Fixed scroll styling of text area Fixed scroll white space for more area to scroll through

--- a/admin/src/style/main.scss
+++ b/admin/src/style/main.scss
@@ -38,3 +38,4 @@
 }
 
 @include scrollify(".main",true);
+@include scrollify("textarea",false);
